[svn r7] [iRedMail+wiki] Sync.

--- a/iredmail/README
+++ b/iredmail/README
@@ -1,22 +1,22 @@
-*) Check if this is the lastest version of rhms before you run any script:
-   http://code.google.com/p/rhms/downloads/list
+*) Check if this is the lastest version before you run any script:
+   http://code.google.com/p/iredmail/downloads/list
 
 *) Wiki page (include step-by-step tutorial):
-   http://code.google.com/p/rhms/wiki/RHEL_Mail_Server_Solution
+   http://code.google.com/p/iredmail/wiki/RHEL_Mail_Server_Solution
 
-*) Please do read the usage page before you run any script in rhms:
-   http://code.google.com/p/rhms/wiki/rhms_Usage
+*) Please do read the usage page before you run any script in iredmail:
+   http://code.google.com/p/iredmail/wiki/iRedMail_Usage
 
 *) Issue tracker & bug report:
-   http://code.google.com/p/rhms/issues/list
+   http://code.google.com/p/iredmail/issues/list
 
 *) Community (Chinese only):
    http://www.osspinc.com/bbs/
 
 *) Quick Installation Guide:
 
-   # cd /path/to/rhms-x.y.z/
+   # cd /path/to/iRedMail-x.y.z/
    # cd pkgs/
    # sh get_all.sh
    # cd ../
-   # sh rhms.sh
+   # sh iRedMail.sh
