--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.1-rc1:
+    * Add perl-Mail-SPF-Query.noarch as mandatory for SPF feature.
     * Initialize version of iRedMail. Same as rhms-0.5.0-rc2.
       rhms ChangeLog please check:
       http://rhms.googlecode.com/svn/trunk/rhms/ChangeLog
