--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,5 +1,6 @@
 iRedMail-0.1-rc1:
-    * Add 'delay_warning_time=30m', remind by muniao. Thanks :)
+    * Add 'policy_time_limit=3600'. Reminded by Edison. Thanks :)
+    * Add 'delay_warning_time=30m'. Reminded by muniao. Thanks :)
     * Add perl-Mail-SPF-Query.noarch as mandatory for SPF feature.
     * Initialize version of iRedMail. based on rhms-0.5.0-rc2.
       rhms ChangeLog please check:
