[svn r45] [iRedMail] Add source package link.

--- a/iRedMail/README
+++ b/iRedMail/README
@@ -15,3 +15,6 @@
 
 * Community:
   http://code.google.com/p/iredmail/#Community
+
+* Source packages:
+  http://www.osspinc.com/iredmail/packages/srpms/
