--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2:
+    * Add 'signed_header_fields' in amavisd.conf.
     * Update dovecot to 1.1.1.
     * Update amavisd-new to 2.6.1.
 
