--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2:
+    * Fix typo error in 'create_mail_mysql_user.sh'. Thanks muniao.
     * Remove roundcubemail version info in 'useragent' option in
       'config/main.inc.php', less is more.
     * Add 'signed_header_fields' in amavisd.conf.
