--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.2:
+    * Add script to convert WinMail user mailboxes to standard IMAP
+      directory structure.
     * Fix ExtMail configuration about 'SYS_MAILDIR_BASE' in webmail.cf,
       Thanks xcrossbow@gmail.
     * Typo in Roundcubemail display_username.patch. remove 'dot' after
