--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,4 @@
-iRedMail-0.2:
+iRedMail-0.2-rc1:
     * Add more amavisd options.
     * Adjust mailgraph filter rule, add greylist graph.
     * Fix quota config in dovecot for 1.1.x. Thanks chenwei. :)
