--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.2-rc1:
+    * Add 'BLACKLIST_REJECTION', 'GREYLIST_REJECTION', 'SPAMTRAP_REJECTION'
+      in policyd, disabled by default.
     * Add 'reject_non_fqdn_sender_domain', 'reject_unknown_sender_domain'
       in smtpd_recipient_restrictions.
     * Add more amavisd options.
