--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.2-rc1:
+    * Uncomment 'smtpd_helo_required=yes', Foxmail will break this rule.
+      Damn, RFC killer.
     * Add 'BLACKLIST_REJECTION', 'GREYLIST_REJECTION', 'SPAMTRAP_REJECTION'
       in policyd, disabled by default.
     * Add 'reject_non_fqdn_sender_domain', 'reject_unknown_sender_domain'
