[svn r95] [iRedMail] +    * Remove INDEX on vmail.mailbox. +    * Add 'smtpd_helo_required=yes' in Postfix.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,8 +1,12 @@
-iRedMail-0.2-rc1:
+iRedMail-0.2-rc2:
+    * Remove INDEX on vmail.mailbox.
+    * Add 'smtpd_helo_required=yes' in Postfix.
     * Add 'BLACKLIST_REJECTION', 'GREYLIST_REJECTION', 'SPAMTRAP_REJECTION'
       in policyd, disabled by default.
     * Add 'reject_non_fqdn_sender_domain', 'reject_unknown_sender_domain'
       in smtpd_recipient_restrictions.
+
+iRedMail-0.2-rc1:
     * Add more amavisd options.
     * Adjust mailgraph filter rule, add greylist graph.
     * Fix quota config in dovecot for 1.1.x. Thanks chenwei. :)
