--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.2-rc2:
+    * Improve tool/create_mail_user_mysql.sh, use username as password
+      by default.
     * Make policyd reject 5xx code while user quota exceeded. Thanks
       chenwei1973@gmail.
     * Remove 'reject_unverified_recipient, reject_unlisted_recipient,'
