--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2-rc2:
+    * Add policyd blacklist_helo list. Thanks muniao. :)
     * Improve tool/create_mail_user_mysql.sh, use username as password
       by default.
     * Make policyd reject 5xx code while user quota exceeded. Thanks
