--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2-rc2:
+    * Add 'SMTP_SERVER' for distribute deployment.
     * Add iRedMail VERSION info in 'conf/global'.
     * Set 'BLACKLIST_TEMP_REJECT=0'. Disabled by default. Thanks muniao.
     * Add policyd blacklist_helo list. Thanks muniao. :)
