--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2-rc2:
+    * Set policyd chroot directory to its home directory.
     * Create HOME directory for policyd user. otherwise, crontabs will
       failed. Thanks chenwei. :)
     * Add 'SMTP_SERVER' for distribute deployment.
