--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2-rc2:
+    * Mailgraph localtion changed to '/var/www/cgi-bin/mailgraph.cgi'.
     * Add 'redirect' command in sieve rule file.
     * Drop SPAM mail to INBOX, not Junk.
     * Set policyd chroot directory to its home directory.
