--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.2-rc2:
+    * Changed 'SENDER_QUOTA_REJECTION' msg, reduce SENDERMSGLIMIT to
+      60 msgs per hour. Thanks chenwei. :)
     * Implement vacation via dovecot-sieve vacation feature, vacation
       rule sample was added. We need a roundcubemail plugin now.
     * Allow specify non-standard httpd port in 'conf/httpd' now.
