[svn r151] [iRedMail]     * Add optional package for Roundcubemail: php-pecl-fileinfo.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2-rc2:
+    * Add optional package for Roundcubemail: php-pecl-fileinfo.
     * Changed 'SENDER_QUOTA_REJECTION' msg, reduce SENDERMSGLIMIT to
       60 msgs per hour. Thanks chenwei. :)
     * Implement vacation via dovecot-sieve vacation feature, vacation
