[svn r156] [iRedMail] +    * Initialize import karadog@gmail's roundcubemail patch for +      national imap folder name. Good Job, Kara. :)

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.2-rc2:
+    * Initialize import karadog@gmail's roundcubemail patch for
+      national imap folder name. Good Job, Kara. :)
     * Add optional package for Roundcubemail: php-pecl-fileinfo.
     * Changed 'SENDER_QUOTA_REJECTION' msg, reduce SENDERMSGLIMIT to
       60 msgs per hour. Thanks chenwei. :)
