[svn r170] [iRedMail]     * Add another policyd instance for recipient throttle feature.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2-rc3:
+    * Add another policyd instance for recipient throttle feature.
     * Update ClamAV to 0.93.3.
     * Update perl-Convert-UUlib to 1.11. Bug fix version.
 
