--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,8 +1,8 @@
 iRedMail-0.2-rc3:
     * Add default whitelist and blacklist records shipped within
       policyd.
-    * Add another policyd instance for recipient throttle feature,
-      sync init script, crontab job, pidfile.
+    * Add another policyd instance for sender throttle feature,
+      sync init script, crontab job, pidfile. Disabled by default.
     * Update ClamAV to 0.93.3.
     * Update perl-Convert-UUlib to 1.11. Bug fix version.
 
