--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,7 @@
 iRedMail-0.2-rc3:
+    * Fix mailgraph directory and cgi file privilege for extmail.
+      Bug reported by ranjun. Thanks :)
+    * Make 'crond' as enabled services.
     * Update phpMyAdmin to 2.11.7.1.
     * Add default whitelist and blacklist records shipped within
       policyd.
