--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2-rc3:
+    * Add maillog analyze tool: tools/get_helo_count.sh.
     * Fix sieve log file permission.
     * Make maillog as standalone logrotated job.
     * Update policyd to 1.82-5.ired, support wildcard in
