--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2-rc3:
+    * Add 'mail_name', 'mail_version' in postfix. Thanks muniao. :)
     * Update dovecot to 1.1.2. Thanks atrpms.net.
     * Update phpMyAdmin to 2.11.8.1.
     * Add maillog analyze tool: tools/get_helo_count.sh.
