--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.2-rc4:
+    * Improve postfixadmin config dialog, fill with default domain
+      admin address.
     * Sync LDAP schema.
     * Fix postfix sender_access ldap lookup.
     * Add pcre rule in header_checks(5) for postfix to replace
