--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.2-stable:
+    * Update postgrey to 1.32.
     * Update postfix to 2.3.15. Reference:
       http://groups.google.com/group/iredmail/t/d38f9d6a8c1e9cf0
     * Add 'expired' field in SQL template for expired date, used for
