--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
-iRedMail-0.2-stable:
+iRedMail-0.2-rc4:
+    * Remove per-user restriction feature.
     * Update postgrey to 1.32.
     * Update postfix to 2.3.15. Reference:
       http://groups.google.com/group/iredmail/t/d38f9d6a8c1e9cf0
