[svn r315] [iRedMail] Add branch: branches/iRedMail-0.2.x. Starting 0.3-beta1.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,3 +1,6 @@
+iRedMail-0.3-beta1:
+
+
 iRedMail-0.2:
     * Add iRedMail logo in several web-base programs, used to track
       how many users use them.
