[svn r327] [iRedMail] +    * Fix policyd crontab job, configuration file permission.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,5 +1,5 @@
 iRedMail-0.3-beta1:
-    * Fix policyd crontab job.
+    * Fix policyd crontab job, configuration file permission.
     * Add 'default-character-set=utf8' in my.cnf.
 
 iRedMail-0.2:
