--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.3-beta1:
+    * Fix perl regular expression while modify ldap init script.
+      Thanks to ejzhang@www.iredmail.org/bbs/.
     * Add script to backup mysql databases: 'tools/backup_mysql_db.sh'.
     * Fix policyd crontab job, configuration file permission.
     * Add 'default-character-set=utf8' in my.cnf.
