--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.3-beta1:
+    * Make SquirrelMail work with MySQL backend.
+    * Update SquirrelMail plugin 'compatibility' to '2.0.13-1.0'.
     * Remove '163data.com.cn' from helo_access.pcre.
     * Fix perl regular expression while modify ldap init script.
       Thanks to ejzhang@www.iredmail.org/bbs/.
