[svn r357] [iRedMail] Sync project info.

--- a/iRedMail/AUTHORS
+++ b/iRedMail/AUTHORS
@@ -15,6 +15,6 @@ iRedMail project members:
         * Edison (edisonwang2007 <at> gmail.com)
 
 Credits:
-    * http://code.google.com/p/iredmail/wiki/iRedMail_Credits
+    * http://code.google.com/p/iredmail/wiki/Credits
 
-Thanks all people who made this project keep moving.
+Thanks all people who made this project possible and keep moving.
