--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3-beta1:
+    * Correct 'local' and 'virtual' domains in Postfix. Thanks shing.
     * Enable SMTP AUTH while sending email in SquirrelMail.
     * Make SquirrelMail work with MySQL backend.
     * Update SquirrelMail plugin 'compatibility' to '2.0.13-1.0'.
