--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3-beta1:
+    * Remove external iRedMail logo link.
     * Update phpMyAdmin to '2.11.9'.
     * Compaction 'smtpd_sender_login_maps' in postfix. Thanks shing.
     * Correct 'local' and 'virtual' domains in Postfix. Thanks shing.
