[svn r376] [iRedMail] Sync login_auto plugin config. Fix typo.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,6 +1,7 @@
 iRedMail-0.3-beta1:
     * Change official package mirror to 'www.iredmail.org'.
-    * Add one more SquirrelMail plugin: login_auto.
+    * Add one more SquirrelMail plugin: login_auto, disable
+      'select_language' plugin.
     * Bulk change ldap lookup filenames for postfix.
     * Remove external iRedMail logo link.
     * Update phpMyAdmin to '2.11.9'.
