--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3-beta1:
+    * Update Dovecot to 1.1.3.
     * Change official package mirror to 'www.iredmail.org'.
     * Add one more SquirrelMail plugin: login_auto, disable
       'select_language' plugin.
