--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,5 +1,11 @@
 iRedMail-0.3-beta1:
-    * Update Dovecot to 1.1.3.
+    * Update unrar to 3.8.2-1.
+    * Update perl-MailTools to 2.03-1.
+    * Update perl-Mail-DKIM to 0.32-1.
+    * Update perl-Error to 0.17014-1.
+    * Update perl-BerkeleyDB to 0.34-1.
+    * Update ClamAV to 0.94-1.
+    * Update Dovecot to 1.1.3-0_80.
     * Change official package mirror to 'www.iredmail.org'.
     * Add one more SquirrelMail plugin: login_auto, disable
       'select_language' plugin.
