--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3-beta1:
+    * Use 'iredmail.org' as example, replace 'osspinc.com'.
     * Update unrar to 3.8.2-1.
     * Update perl-MailTools to 2.03-1.
     * Update perl-Mail-DKIM to 0.32-1.
