--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3-beta1:
+    * Update Horde WebMail to 1.1.2.
     * Add avelsieve plugin for SquirrelMail.
     * Initialize import pysieved-1.0 for managesieve service.
     * Use 'iredmail.org' as example, replace 'osspinc.com'.
