--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,3 +1,6 @@
+iRedMail-0.3-beta2:
+    * Make managesieve as an optional component.
+
 iRedMail-0.3-beta1:
     * Add plugin section for sieve in dovecot.conf, remove sample
       sieve filter rule file.
