--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3-beta2:
+    * Add SquirrelMail plugin: add_address.
     * Update phpMyAdmin to '2.11.9.1'.
     * Re-enable select_language plugin in SquirrelMail.
     * Make managesieve as an optional component.
