[svn r443] [iRedMail]     * Enable bypass setting in amavisd: for internal network,       authenticated virtual users, smtps, submissions.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,6 +1,6 @@
 iRedMail-0.3-beta2:
-    * Allow SASL authenticated users via submission or smtps to bypass
-      scanning.
+    * Enable bypass setting in amavisd: for internal network,
+      authenticated virtual users, smtps, submissions.
     * Enable submission in postfix.
     * Bypass checks for internally generated mail: master.cf.
     * Hide Apache + PHP version.
