--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.1:
+    * Update phpMyAdmin to 2.11.9.2.
     * Disable pysieved service in xinetd.
     * Fix 'killall' command path in dovecot logrotate file. Thanks
       chenwei <at> gmail.com.
