--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.1:
+    * Use unique SSL cert file: /etc/pki/iRedMail{Key,Cert}.pem.
     * Update SquirrelMail to 1.4.16.
     * Update phpMyAdmin to 2.11.9.2.
     * Disable pysieved service in xinetd.
