--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,8 +1,9 @@
 iRedMail-0.3.1:
-    * Use unique SSL cert file in Postfix, Dovecot, Apache, OpenLDAP:
-      /etc/pki/iRedMail{Key,Cert}.pem.
+    * Update Dovecot to 1.1.4.
     * Update SquirrelMail to 1.4.16.
     * Update phpMyAdmin to 2.11.9.2.
+    * Use unique SSL cert file in Postfix, Dovecot, Apache, OpenLDAP:
+      /etc/pki/iRedMail{Key,Cert}.pem.
     * Disable pysieved service in xinetd.
     * Fix 'killall' command path in dovecot logrotate file. Thanks
       chenwei <at> gmail.com.
