--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.1:
+    * Update Horde WebMail to 1.2.
     * Update Dovecot to 1.1.4.
     * Update SquirrelMail to 1.4.16.
     * Update phpMyAdmin to 2.11.9.2.
