--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,12 @@
 iRedMail-0.3.1:
+    * Replace original perl-DBI-1.605 shipped within RedHat/CentOS
+      by 1.607-1 which provided by rpmforge.
+    * Replace original perl-DBD-mysql-3.0007 shipped within
+      RedHat/CentOS by 4.008-1 which provided by rpmforge.
+    * Update perl-IO-Multiplex to 1.10-1.
+    * Update perl-MailTools to 2.04-1.
+    * Update perl-Mail-SPF to 2.006-1.
+    * Update perl-Archive-Zip to 1.26-1.
     * Update Horde WebMail to 1.2.
     * Update Dovecot to 1.1.4.
     * Update SquirrelMail to 1.4.16.
